--- a/TODO
+++ b/TODO
@@ -4,4 +4,5 @@ Implement 'New' post functionality.
 Implement 'Logout' feature.
 Find ad provider and place their ads.
 #Possibly rework select group floating panel.
-Implement Search functionality.
+Implement Search Post functionality, by FB user and by keyword.
+Implement Delete Post functionality for owned posts.
