--- a/TODO
+++ b/TODO
@@ -10,3 +10,8 @@ Rework timeout issue so that instead of simply refreshing the page, a new access
 Implement check to see that app has the correct permissions.
 *Possibly* add functionality to filter 'My Posts' by comment data.
 Artwork.
+Show or hide groups that the user chooses. Can either be saved locally (per computer) or in the DB.
+Helper Popups:
+    Start here with group choosing.
+    Point out controls for post details toolbar.
+    
