--- a/dev/TODO
+++ b/dev/TODO
@@ -14,3 +14,5 @@ Fix bug where posts are improperly counted when more posts are loaded.
 Include prompt to change app settings so that others using Swapper's Delight can see the current user's photos.
     https://www.facebook.com/settings?tab=applications&section=friends_share&view (Apps Others Use)
 Delete comments?
+Acknowledge tags in posts and comments.
+Allow creation of tags in posts and comments.
