--- a/dev/TODO
+++ b/dev/TODO
@@ -15,3 +15,4 @@ Include prompt to change app settings so that others using Swapper's Delight can
 Delete comments?
 Acknowledge tags in posts and comments.
 Allow creation of tags in posts and comments.
+Fix issue of trying to bring up a post that is no longer there.
