--- a/dev/TODO
+++ b/dev/TODO
@@ -16,3 +16,4 @@ Delete comments?
 Acknowledge tags in posts and comments.
 Allow creation of tags in posts and comments.
 Fix issue of trying to bring up a post that is no longer there.
+Replace dialogs with nicer ones.
