--- a/dev/TODO
+++ b/dev/TODO
@@ -3,7 +3,6 @@ Implement Search Post functionality, by FB user and by keyword.
 Implement check to see that app has the correct permissions.
 *Possibly* add functionality to filter 'My Posts' by comment data.
 Artwork.
-Show or hide groups that the user chooses. Can either be saved locally (per computer) or in the DB.
 Helper Popups:
     Start here with group choosing.
     Point out controls for post details toolbar.
@@ -14,3 +13,4 @@ Acknowledge tags in posts and comments.
 Allow creation of tags in posts and comments.
 Fix issue of trying to bring up a post that is no longer there.
 Replace dialogs with nicer ones.
+Image viewing panel.
