--- a/dev/TODO
+++ b/dev/TODO
@@ -13,3 +13,4 @@ Acknowledge tags in posts and comments.
 Allow creation of tags in posts and comments.
 Fix issue of trying to bring up a post that is no longer there.
 Replace dialogs with nicer ones.
+Dynamic comment count updating through AJAX.
