--- a/dev/TODO
+++ b/dev/TODO
@@ -1,6 +1,6 @@
 Implement 'New' post functionality.
 Implement check to see that app has the correct permissions.
-*Possibly* add functionality to filter 'My Posts' by comment data.
+
 Artwork.
 Helper Popups:
     Start here with group choosing.
@@ -10,7 +10,10 @@ Include prompt to change app settings so that others using Swapper's Delight can
 Delete comments?
 Acknowledge tags in posts and comments.
 Allow creation of tags in posts and comments.
-Fix issue of trying to bring up a post that is no longer there.
 Replace dialogs with nicer ones.
 Dynamic comment count updating through AJAX.
 Prevent sessions from running forever. (Implement a refresh limit.)
+
+
+The 'Maybe' List:
+Add functionality to filter 'My Posts' by comment data.
