--- a/dev/TODO
+++ b/dev/TODO
@@ -1,6 +1,7 @@
 Implement 'New' post functionality.
 Implement check to see that app has the correct permissions.
 Artwork.
+Privacy Policy.
 Include prompt to change app settings so that others using Swapper's Delight can see the current user's photos.
     https://www.facebook.com/settings?tab=applications&section=friends_share&view (Apps Others Use)
 Acknowledge tags in posts and comments.
