--- a/dev/TODO
+++ b/dev/TODO
@@ -1,3 +1,4 @@
+*Clean up the back end code. Add better error handling.*
 *Implement 'New' post functionality.
 Implement check to see that app has the correct permissions.
 *Artwork.
