--- a/dev/TODO
+++ b/dev/TODO
@@ -13,6 +13,7 @@ View group info panel.
     pic_cover
     View Group in Facebook
 Captions for shared photos.
+When calculating post-image-tile width, whether or not a scrollbar is visible needs to be taken into account.
 
 The 'Maybe' List:
 Add functionality to filter 'My Posts' by comment data.
