--- a/dev/TODO
+++ b/dev/TODO
@@ -17,3 +17,4 @@ When calculating post-image-tile width, whether or not a scrollbar is visible ne
 
 The 'Maybe' List:
 Add functionality to filter 'My Posts' by comment data.
+Video support.
