--- a/dev/TODO
+++ b/dev/TODO
@@ -4,6 +4,7 @@ Include prompt to change app settings so that others using Swapper's Delight can
 Handle tag viewing and creation.
 Left/Right keys.
 Admins have ability to delete others' posts.
+Edit comments.
 View group info panel.
     Description
     Admin
